feat(ops): 运维监控与数据归档体系
主要变更：
- 新增 system-health-check.py：系统健康检查脚本
  * 支持快速检查/完整检查/持续监控三种模式
  * 检查API服务、MySQL、Redis、Flyway迁移状态
  * 支持 --watch 持续监控模式

- 新增 data-archiver.py：数据归档脚本
  * 配置化归档策略（操作日志90天/AI记忆180天等）
  * 支持 --dry-run 预览模式和 --execute 实际执行
  * 分批删除避免锁表

- HikariCP指标暴露增强：metrics端点暴露hikari指标

- IntentCompositionService空指针防护：single()方法增加null检查

测试验证：
- mvn compile: BUILD SUCCESS
- npx tsc --noEmit: 0 errors